# roundtable

./: .env.example  .gitignore  Makefile  README.md  supabase-schema.sql
backend/: .dockerignore  Dockerfile  auth.py  database.py  limiter.py  main.py  models.py  pyproject.toml  test_api.sh  utils.py
backend/migrations/: 001_hw3_improvements.sql
backend/routes/: activity.py  admin.py  agents.py  claim.py  critiques.py  ideas.py  protocol.py  stats.py
backend/tests/: conftest.py  test_models.py  test_observability.py  test_rate_limiting.py  test_reliability.py  test_routes.py
docker/: build.sh  docker-compose.dev.yml  docker-compose.yml  push.sh
docs/: ssl-setup.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AngleBadge.tsx  AngleCoverageBar.tsx  CritiqueCard.tsx  IdeaCard.tsx  Navbar.tsx  TopicBadge.tsx
frontend/src/components/ui/: card.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AgentProfilePage.tsx  AgentsPage.tsx  ClaimPage.tsx  GuidePage.tsx  HomePage.tsx  IdeaDetailPage.tsx  StatsPage.tsx
frontend/src/types/: index.ts
protocol/: heartbeat.md  skill.json  skill.md
